aux_source_directory(src/module1a module1a_LIB)
aux_source_directory(src/module1b module1b_LIB)
add_library(module1a ${module1a_LIB})
add_library(module1b ${module1b_LIB})
add_library(module1 INTERFACE)
target_include_directories(module1 INTERFACE include/robotlab)
target_include_directories(module1a PUBLIC include)
target_include_directories(module1b PUBLIC include)
target_link_libraries(module1b assembly2)
target_link_libraries(module1 INTERFACE module1a module1b)
