aux_source_directory(src module2_LIB)

add_library(open62514 src/open62541.c)
add_library(ua_define INTERFACE)
add_library(variable src/variable.cpp)
add_library(object src/object.cpp)
add_library(argument src/argument.cpp)
add_library(client_h src/client.cpp)
add_library(server_h src/server.cpp)
add_library(opcua_cs INTERFACE)

target_include_directories(open62514 PUBLIC include)
target_include_directories(ua_define INTERFACE include/robotlab/opcua_cs/ua_type)
target_include_directories(variable PUBLIC include)
target_include_directories(argument PUBLIC include)
target_include_directories(object PUBLIC include)
target_include_directories(client_h PUBLIC include)
target_include_directories(server_h PUBLIC include)
target_include_directories(opcua_cs INTERFACE include)


target_link_libraries(open62514 pthread)
target_link_libraries(ua_define INTERFACE open62514)
target_link_libraries(variable ua_define)
target_link_libraries(argument ua_define)
target_link_libraries(object variable)
target_link_libraries(client_h argument object variable)
target_link_libraries(server_h argument object variable)
target_link_libraries(opcua_cs INTERFACE client_h server_h)
